--- a/QueixaAki.App/QueixaAki/Components/PasswordBox.xaml
+++ b/QueixaAki.App/QueixaAki/Components/PasswordBox.xaml
@@ -2,11 +2,13 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:components="clr-namespace:QueixaAki.Components;assembly=QueixaAki"
-             x:Class="QueixaAki.Components.PasswordBox">
+             x:Class="QueixaAki.Components.PasswordBox"
+             x:Name="Password">
   <ContentView.Content>
       <StackLayout Orientation="Horizontal">
           <components:BaseEntry x:Name="BaseEntryBox" 
                                 FontSize="Medium" 
+                                Text="{Binding Source={x:Reference Password}, Path=Text}"
                                 IsPassword="{Binding IsPasswordShow}" 
                                 TextColor="{StaticResource TertiaryColor}"
                                 PlaceholderColor="{StaticResource TertiaryColor}"
